# pypi-inspector.letsbuilda.dev

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  startup.sh
.github/workflows/: azure-deploy.yml  dependency-review.yml  docker-build-push.yaml  github-pages-python-sphinx.yaml  main_pypiinspectorletsbuildadev.yml  precommit-autoupdate.yaml  python-ci.yaml
docs/source/: conf.py  index.rst
src/pypi_inspector/: __init__.py  app.py  pypi.py  routes.py
src/pypi_inspector/templates/: base.html  index.html
tests/: conftest.py  test_build_app.py
